[package]
name = "avr_delay"
version = "0.3.1"
authors = ["John Jorgensen <jjorgensen@hsdp.io>"]
edition = "2018"

description = "A crate for AVR providing software-based delay functions"
repository = "https://github.com/avr-rust/delay"
documentation = "https://docs.rs/avr_delay"
license = "MIT/Apache-2.0"
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
avr-config = "1.0"

[dev-dependencies]
avr-std-stub = "1.0" # for examples
